--- a/index.html
+++ b/index.html
@@ -22,22 +22,23 @@
   <main>
     <section id="landing" class="page">
       <h2>Welcome</h2>
-      <p>Hi, I'm Aidan! I'm a Java developer passionate about building clean, creative solutions. Explore my work below.</p>
+      <p>Hi, Thanks for visiting my website. It's currently still in development, but in the future,</p>
+      <p>you can find whatever I'm working on here</p>
     </section>
 
     <section id="past-projects" class="page">
       <h2>Past Projects</h2>
-      <p>Here’s a look at some of my earlier Java projects...</p>
+      <p>This will showcase the projects I've done already</p>
     </section>
 
     <section id="current-projects" class="page">
       <h2>Current Projects</h2>
-      <p>Check out what I’m working on right now...</p>
+      <p>This will talk about the projects I'm working on now</p>
     </section>
 
     <section id="about" class="page">
       <h2>About Me</h2>
-      <p>I'm a Java developer with a love for code, problem-solving, and building things that work.</p>
+      <p>This is going to be a page about me.</p>
     </section>
   </main>
 
