--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
   <main>
     <section id="landing" class="page">
       <h2>Welcome</h2>
-      <p>Hi, Thanks for visiting my website. It's currently still in development, but in the future,</p>
-      <p>you can find whatever I'm working on here</p>
+      <p>Hi, Thanks for visiting my website. It's currently still in development, but in the future,you can find whatever I'm working on here</p>
     </section>
 
     <section id="past-projects" class="page">
